static/css/clean-blog.css
/* ... */
@media only screen and (max-width: 550px) {
  header.masthead .site-heading {
    padding-top: 38vw;
  }
}

@media only screen and (max-width: 535px) {
  header.masthead .site-heading {
    padding-top: 37vw;
  }
}

@media only screen and (max-width: 520px) {
  header.masthead .site-heading {
    padding-top: 35vw;
  }
}

.rowContainer {
  position: relative;
  top: 200px;
  left: 96px;
}

.histoire {
  margin-bottom: 200px;
  overflow-wrap: break-word;
}

@media only screen and (max-width: 991px) {
  .rowContainer {
    top: 150px;
    left: 30px;
  }
}

.mdc-card {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.mdc-card__media {
  width: 7vw;
}

.mdc-card__primary-action {
  height: 100%;
}

.mdc-card__primary-action:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 0;
}

.mdc-card__media:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 0;
}

.mdc-card__media:last-child {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.display {
  display: flex;
  flex-direction: row;
  overflow-wrap: break-word;
}

.summary {
  margin-left: 15px;
  width: 70%;
  height: 7vw;
  overflow: hidden;
  transition: all 0.5s;
}


@media only screen and (max-width: 1099px) {
  .mdc-card__media {
    width: 77px;
  }
  .summary {
    height: 77px;
  }
}

.summary.expanded {
  overflow: scroll;
  height: 80vh;
}

.mdc-icon-button, .mdc-card__action--icon, button.mdc-card__action--icon {
  padding: 0;
}

button.mdc-card__action--icon:hover {
  background-color: transparent;
}

.mdc-card__action--icon .stroke-transparent {
  -webkit-text-stroke: 1px rgba(0, 0, 0, .6);
  -webkit-text-fill-color: transparent;
  color: white;
  font-size: 24px;
}

.mdc-card__action--icon .stroke-transparent:hover {
  -webkit-text-stroke: 1px rgba(219, 0, 0, 0.6);;
  -webkit-text-fill-color: transparent;
  color: white;
}

.hearted .stroke-transparent, .hearted .stroke-transparent:hover {
  -webkit-text-stroke: none;
  -webkit-text-fill-color: rgba(0, 0, 0, .6);
  color: rgba(0, 0, 0, .6);
}

.wp-block-columns {
  display: flex;
}

.ez-toc-title {
  padding: 0;
  margin: 0;
}

#ez-toc-container nav {
  position: relative;
  top: -40px;
}

.summary h2, .summary figcaption {
  color: black;
  font-size: 14px;
}


.rowContainer {
    top: 200px;
    left: 10px;
    max-width: 85vw;
}

.mdc-layout-grid {
  position: relative;
  top: 200px;
  height: 100vh;
}

@media only screen and (min-width: 992px) {
  .mdc-layout-grid {
    left: 96px;
  }
}

.padded {
  padding-top: 230px;
}

.toc-box { list-style: none; }
.toc-title { display: none; }

a.toc-item-link {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.wrap-toc .toc-box .toc-item-link {
  display: block;
  padding: 4px 1rem;
  color: #444;
}

.wrap-toc .toc-box .toc-item-link:hover {
  color: #ff0007;
}

.wrap-toc .toc-box .toc-item.active .toc-item-link {
  margin-bottom: -35px;
  color: #ff0007;
}

.wrap-toc .toc-box .toc-item.deactivating .toc-item-link {
  margin-bottom: -32px;
}

.wrap-toc .toc-box .toc-item.activated:after {
  content: "◼︎";
  position: relative;
  top: 7px;
  right: -88.3%;
  color: #ff0007;
  font-size: 50px;
  -webkit-animation: appear .2s forwards;
  -moz-animation:    appear .2s forwards;
  -o-animation:      appear .2s forwards;
  animation:         appear .2s forwards;
  z-index: -1;
}

@-webkit-keyframes appear {
  from { right: -97%; }
  to   { right: -88.3%; }
}
@-moz-keyframes appear {
  from { right: -97%; }
  to   { right: -88.3%; }
}
@-o-keyframes appear {
  from { right: -97%; }
  to   { right: -88.3%; }
}
@keyframes appear {
  from { right: -97%; }
  to   { right: -88.3%; }
}

.wrap-toc .toc-box .toc-item.deactivating:after {
  content: "◼︎";
  position: relative;
  top: 7px;
  right: -97%;
  color: #ff0007;
  font-size: 50px;
  -webkit-animation: disappear .2s normal;
  -moz-animation:    disappear .2s normal;
  -o-animation:      disappear .2s normal;
  animation:         disappear .2s normal;
  z-index: -1;
}

@-webkit-keyframes disappear {
  from { right: -88.3%; }
  to   { right: -97%; }
}
@-moz-keyframes disappear {
  from { right: -88.3%; }
  to   { right: -97%; }
}
@-o-keyframes disappear {
  from { right: -88.3%; }
  to   { right: -97%; }
}
@keyframes disappear {
  from { right: -88.3%; }
  to   { right: -97%; }
}

.toc {
  position: fixed;
  top: 200px;
  right: 3px;
  width: 300px;
  z-index: 3;
  transition: all .5s;
}

.toc-box {
  padding: 5px 0;
  margin: 0; 
  background: linear-gradient(90deg, white 277px, transparent 50px);
}

.toc div {
  position: static !important;
}

ul.toc-box li:first-child {
  display: none;
}

.toc-H3 {
  font-size: 15px;
  margin-left: 20px;
  margin-right: 2.8px;
}

.ContentPage .staticContent_Wrapper .static_content p {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.ContentPage .staticContent_Wrapper .static_content h1, .ContentPage .staticContent_Wrapper .static_content h2, .ContentPage .staticContent_Wrapper .static_content h3 {
  font-family: 'BlairMdITC TT';
}


.ContentPage .staticContent_Wrapper .static_content h2:first-child {
  font-size: 70px;
}

.ContentPage .staticContent_Wrapper .static_content h3 {
  font-size: 40px;
}

@media only screen and (max-width: 991px) {
  .ContentPage .staticContent_Wrapper .static_content h2:first-child {
    font-size: 7vw;
  }

  .ContentPage .staticContent_Wrapper .static_content h2{
    font-size: 5vw;
  }

  .ContentPage .staticContent_Wrapper .static_content h3 {
    font-size: 3vw;
  }

  .ContentPage .staticContent_Wrapper .static_content p {
    font-size: 15px;
  }
}

.mapboxgl-ctrl {
  display: none !important;
}

.histoire p .ME {
  letter-spacing: -6px;
}

.histoire h2 .ME {
  letter-spacing: -22px;
}

.histoire h2:first-child .ME {
  letter-spacing: -25px;
}

.histoire h2 .ME {
  letter-spacing: -22px;
}

.histoire h3 .ME {
  letter-spacing: -14px;
}

.toc-box .toc-H2 .ME {
  letter-spacing: -7px;
}
/* ... */

